Update the background

--- a/Week2/1_Mon/style.css
+++ b/Week2/1_Mon/style.css
@@ -6,7 +6,8 @@
 
 body {
   font-family: 'Segoe UI', sans-serif;
-  background-color: #ffffff;
+  background-image: url('https://ideogram.ai/assets/image/lossless/response/YCAL0TevTDSbl1CQXe2M9Q');
+  background-size:cover;
   color: #0a1f44;
   padding: 20px;
   line-height: 1.6;
